[tool.poetry]
name = "covid19-visualizer"
version = "0.1.0"
description = ""
authors = ["gorjanradevski <gorjanradevski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "^1.0.0"
mplcursors = "^0.3"
numpy = "^1.18.2"
scipy = "^1.4.1"
pandas = "^1.0.3"
seaborn = "^0.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
