[tool.poetry]
name = "cord19-visualizer"
version = "0.1.0"
description = ""
authors = ["gorjanradevski <gorjanradevski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "^1.0.0"
mplcursors = "^0.3"
numpy = "^1.18.2"
pandas = "^1.0.3"
seaborn = "^0.10.0"
gdown = "^3.10.2"
matplotlib = "^3.2.1"
natsort = "^7.0.1"
tifffile = "^2020.2.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
